fix sonar lint issues