@@ -6,7 +6,6 @@ import fr.agregio.energy.core.models.Offer;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OfferRepositoryImp implements OfferRepository {
     private List<Offer> offers;
@@ -29,6 +28,6 @@ public class OfferRepositoryImp implements OfferRepository {
     @Override
     public List<Offer> getOffersByMarket(MarketType marketType) {
         return offers.stream().filter(offer -> offer.getMarketType().equals(marketType))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
